--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,8 @@
     "jest": "^27.5.1",
     "jest-mock-extended": "^3.0.4",
     "material-ui-colors": "^1.0.0",
-    "npm": "^9.6.2",
-    "openai": "^3.2.1",
+    "npm": "^10.5.2",
+    "openai": "^4.38.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-color": "^2.19.3",
@@ -36,7 +36,7 @@
     "react-pro-sidebar": "^1.0.0",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.2",
     "sass": "^1.60.0",
     "styled-components": "^5.3.9",
